<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/fondo_degradado"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logoPr"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/logo1"
        tools:visibility="visible" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:textColor="@color/white"
            android:hint="@string/email_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:textColor="@color/white"
            android:hint="@string/contrase_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBarLog"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Space
        android:layout_width="match_parent"
        android:background="@color/Color1"
        android:layout_height="34dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:backgroundTint="@color/Color1"
        android:text="@string/iniciar" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <TextView
        android:id="@+id/registrar"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/registrate_ahora"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic" />


</LinearLayout>